Updated .gitignore and added composer.lock

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ Thumbs.db
 
 # wordpress specific
 wp-config.php
+wp-content/plugins/
 wp-content/uploads/
 wp-content/blogs.dir/
 wp-content/upgrade/*
@@ -73,6 +74,10 @@ wp-content/mysql.sql
 /wp-content/themes/index.php
 /wp-content/plugins/index.php
 /wp-content/plugins/akismet*
+
+# Composer files
+/vendor
+composer.json
 
 # large/disallowed file types
 # a CDN should be used for these
