--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
 
     "extra": {
         "installer-paths": {
-            "../../plugins/{$name}": ["type:wordpress-plugin"]
+            "wp-content/plugins/{$name}": ["type:wordpress-plugin"]
         }
     }   
 }
